# Embedded-linux

./: .gitignore  README.md
.cache/clangd/index/: libgpiod-input.c.6E5F87FA3363A53F.idx  libgpiod-led.c.8271A1DC15244394.idx
lab1/: CMakeLists.txt  Compilation_process_and_libraries.md  README.md  compilation_process.md  git_tutorial.md
lab1/native-build-hello/: lab1  lab1.c  output.txt
lab10/: led.c  listen-ruuvitags.py  readme.md
lab11/: readme.md
lab12/: readme.md
lab2/: CMakeLists.txt  Compilation_process_and_libraries.md  README.md  Test  hello  hello.c  howto-create-vscode-projects.md  id_rsa.pub  libraries.md  raspi-init.sh
lab3/: .gitignore  Assignment1.md  README.md  configuring-gpio-pin-pullup.md  lab3_hw_setup.md
lab3/.cache/clangd/index/: libgpiod-input.c.6E5F87FA3363A53F.idx  libgpiod-led.c.8271A1DC15244394.idx
lab3/src/: libgpiod-input.c  libgpiod-led.c
lab4/: CMakeLists.txt  readme.md
lab4/.cache/clangd/index/: lab4-ledoff.c.186DF766C8726212.idx  lab4-ledon.c.97767340D5B63C88.idx  main.c.0822817F26E67C64.idx  timers_init.c.9C75A7045B766AF6.idx
lab4/4.0/: readme.md
lab4/4.0/.cache/clangd/index/: lab4-ledoff.c.186DF766C8726212.idx  lab4-ledon.c.97767340D5B63C88.idx
lab4/4.0/results/: cron_blink.txt
lab4/4.0/src/: lab4-ledoff.c  lab4-ledon.c
lab4/4.1/: CMakeLists.txt  answers.txt  fix_broken_lib_links.sh  main.c  pwm_pulse.c  pwm_pulse.h  readme.md  timers_init.c
lab4/4.1/.cache/clangd/index/: main.c.0822817F26E67C64.idx  pwm_pulse.c.F2E4831A87C68CCA.idx  pwm_pulse.h.FADE41C79AC2FB27.idx  timers_init.c.9C75A7045B766AF6.idx  timers_init.h.1E226D246CDBA244.idx
lab4/4.2/: copy_stuff.sh  pwm_with_hw.c  readme.md  timers_init.c  timers_init.h
lab4/4.2/.cache/clangd/index/: pwm_with_hw.c.663E108101F7E1AF.idx  timers_init.c.1E29D074DE6F0D84.idx  timers_init.h.C7DF527D414B92A9.idx
lab5/: README.md
lab5/src/: event_test_with_threads.c  event_test_with_threads_debounce.c  event_test_without_threads.c
lab6/: readme.md
lab6/.cache/clangd/index/: event_test_with_threads_debounce.c.F2756F756AFEC197.idx
lab6/src/: button.c  button.h  event_test_with_threads_debounce.c  led.c  led.h  main.c  mode.c  mode.h  pwm.c  pwm.h  pwm_with_hw.c  pwm_with_hw.h  servo.c  timers_init.c
lab7/: Readme.md  howto-create-vscode-projects.md  notes.txt  readme.md
lab7/mqtt-raspi/: CMakeLists.txt  gpio.c  gpio.h  mqtt-client.c
lab7/mqtt-vm/: mqtt-client  mqtt-client.c
lab8/: Readme.md
lab8/results/: mypage.html
lab9/: Readme.md  pydemo.py
lab9/9.3/: CMakeLists.txt  detect_servo.c  detect_servo.h  main.c
lab9/9.4/result/: load20rate.txt
